--- a/src/main/webapp/WEB-INF/pages/student/showResultDetail.html
+++ b/src/main/webapp/WEB-INF/pages/student/showResultDetail.html
@@ -50,14 +50,17 @@
 
                 <el-table-column
                         label="序号"
+                        sortable
                         prop="id">
                 </el-table-column>
                 <el-table-column
                         label="发起人"
+                        sortable
                         prop="eventInfo.initiator">
                 </el-table-column>
                 <el-table-column
                         label="结束时间"
+                        sortable
                         prop="endTime">
                 </el-table-column>
                 <el-table-column
