--- a/src/main/webapp/WEB-INF/pages/tutor/showResultDetail.html
+++ b/src/main/webapp/WEB-INF/pages/tutor/showResultDetail.html
@@ -52,18 +52,22 @@
 
                 <el-table-column
                         label="导师姓名"
+                        sortable
                         prop="name">
                 </el-table-column>
                 <el-table-column
                         label="教师工号"
+                        sortable
                         prop="number">
                 </el-table-column>
                 <el-table-column
                         label="所在学院"
+                        sortable
                         prop="major.collegeName">
                 </el-table-column>
                 <el-table-column
                         label="主要专业"
+                        sortable
                         prop="major.major">
                 </el-table-column>
 
